[package]
name = "medforge"
version = "0.2.0"
edition = "2024"
description = "High-performance HL7v2 message parser with Python bindings"
license = "MIT"

[lib]
name = "medforge"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
