[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ironpipe"
version = "0.1.0"
description = "High-performance HL7v2 message parser powered by Rust"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "ironpipe._core"

[tool.pytest.ini_options]
testpaths = ["tests"]
