[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "medforge"
version = "0.1.0"
description = "High-performance HL7v2 message parser powered by Rust"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["hl7", "hl7v2", "parser", "healthcare", "medical", "rust"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/medforge/medforge"
Issues = "https://github.com/medforge/medforge/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-benchmark"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "medforge._core"

[tool.pytest.ini_options]
testpaths = ["tests"]
